--- a/roles/install/tasks/main.yml
+++ b/roles/install/tasks/main.yml
@@ -13,3 +13,12 @@
   become: yes
   apt: name=mongodb-org update_cache=yes
    
+- copy:
+    src: "{{ role_path }}/files/mongodb.service"
+    dest: /etc/systemd/system/mongodb.service
+	
+- name: Update the systemd service
+      raw: systemctl daemon-reload
+	  
+- name: Update the systemd service
+      raw: systemctl start mongodb
