--- a/roles/install/tasks/main.yml
+++ b/roles/install/tasks/main.yml
@@ -15,7 +15,7 @@
    
 - copy:
     src: "{{ role_path }}/files/mongodb.service"
-    dest: /etc/systemd/system/mongodb.service
+    dest: "/etc/systemd/system/mongodb.service"
 	
 - name: Update the systemd service
       raw: systemctl daemon-reload
