--- a/roles/install/tasks/main.yml
+++ b/roles/install/tasks/main.yml
@@ -15,10 +15,9 @@
    
 - copy:
     src: "{{ role_path }}/files/mongodb.service"
-    dest: "/etc/systemd/system/mongodb.service"
-	
+    dest: /etc/systemd/system/mongodb.service
 - name: Update the systemd service
       raw: systemctl daemon-reload
-	  
+
 - name: Update the systemd service
       raw: systemctl start mongodb
